# AM_MIDI2.0Lib

./: .clang-format  .clang-tidy  .codacy.yaml  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Doxyfile  LICENSE  README.md  REUSE.toml  mainpage.md  tests.cpp
.github/: dependabot.yml
.github/workflows/: ci.yaml  codacy.yaml  codecov.yaml  codeql.yaml  coverity.yaml  fuzztest.yaml  msvc.yaml
benchmark/: CMakeLists.txt  m2benchmark.cpp
cmake/: setup_target.cmake
demo/: CMakeLists.txt
demo/ci_create_discovery/: CMakeLists.txt  ci_create_discovery.cpp
demo/ci_discovery/: CMakeLists.txt  ci_discovery.cpp
demo/ci_dispatcher/: CMakeLists.txt  ci_dispatcher.cpp
demo/dispatcher_function/: CMakeLists.txt  dispatcher_function.cpp  main.cpp
demo/midi1_to_ump/: CMakeLists.txt  midi1_to_ump.cpp
demo/send_ump/: CMakeLists.txt  send_ump.cpp
demo/ump_dispatcher_function/: CMakeLists.txt  ump_dispatcher_function.cpp
docs/: conf.py  environment.yaml  index.rst
include/: bytestreamToUMP.h  fifo.h  mcoded7.h  midiCIProcessor.h  umpProcessor.h  umpToBytestream.h  umpToMIDI1Protocol.h  utils.h
include/midi2/: bitfield.h  bitfield.hpp  bytestreamToUMP.h  bytestreamToUMP.hpp  bytestream_to_ump.hpp  cache.hpp  ci7text.hpp  ci_create_message.hpp  ci_dispatcher.hpp  ci_dispatcher_backend.hpp  ci_types.h  ci_types.hpp  dispatcher.hpp  dispatcher_backend.hpp  fifo.h  fifo.hpp  icubaby.hpp  iumap.hpp  lru_list.hpp  mcoded7.h  mcoded7.hpp  midi2.hpp  midiCIMessageCreate.h  midiCIMessageCreate.hpp  midiCIProcessor.h  midiCIProcessor.hpp  translator.hpp  umpMessageCreate.h  umpMessageCreate.hpp  umpProcessor.h  umpProcessor.hpp  umpToBytestream.h  umpToBytestream.hpp  umpToMIDI1Protocol.h  umpToMIDI1Protocol.hpp  ump_dispatcher.hpp  ump_dispatcher_backend.hpp  ump_to_bytestream.hpp  ump_to_midi1.hpp  ump_to_midi2.hpp  (+5 more)
include/midi2/adt/: bitfield.hpp  cache.hpp  fifo.hpp  iumap.hpp  lru_list.hpp  plru_cache.hpp  uinteger.hpp
include/midi2/bytestream/: bytestream_to_ump.hpp  bytestream_types.hpp  ump_to_bytestream.hpp  usbm1_to_bytestream.hpp
include/midi2/ci/: ci7text.hpp  ci_create_message.hpp  ci_dispatcher.hpp  ci_dispatcher_backend.hpp  ci_types.hpp
include/midi2/ump/: ump_as_array.hpp  ump_dispatcher.hpp  ump_dispatcher_backend.hpp  ump_to_bytestream.hpp  ump_to_midi1.hpp  ump_to_midi2.hpp  ump_types.hpp  ump_utils.hpp
src/: bytestreamToUMP.cpp  bytestream_to_ump.cpp  midiCIMessageCreate.cpp  midiCIProcessor.cpp  umpMessageCreate.cpp  umpProcessor.cpp  umpToBytestream.cpp  umpToMIDI1Protocol.cpp  ump_to_bytestream.cpp  ump_to_midi1.cpp  ump_to_midi2.cpp  utils.cpp
unittests/: .clang-tidy  CMakeLists.txt  CMakeLists.txt~  test_bitfield.cpp  test_bytestreamToUMP.cpp  test_bytestream_to_ump.cpp  test_cache.cpp  test_ci7.cpp  test_ci_create_message.cpp  test_ci_dispatcher.cpp  test_ci_dispatcher_backend.cpp  test_ci_processor.cpp  test_ci_types.cpp  test_dispatcher_backend.cpp  test_fifo.cpp  test_iumap.cpp  test_lru.cpp  test_mcoded7.cpp  test_plru_cache.cpp  test_scale.cpp  test_umpProcessor.cpp  test_umpToBytestream.cpp  test_umpToMIDI1Protocol.cpp  test_ump_bytestream_round_trip.cpp  test_ump_dispatcher.cpp  test_ump_dispatcher_backend.cpp  test_ump_to_bytestream.cpp  test_ump_to_midi1.cpp  test_ump_to_midi2.cpp  test_ump_types.cpp  test_usbm1_to_bytestream.cpp
