#===-- CMakeLists ------------------------------------------------------------*- C++ -*-===//
#
# midi2 library under the MIT license.
# See https://github.com/paulhuggett/AM_MIDI2.0Lib/blob/main/LICENSE for license information.
#
# SPDX-FileCopyrightText: Copyright © 2025 Paul Bowen-Huggett
# SPDX-License-Identifier: MIT
#
#===------------------------------------------------------------------------------------===//

add_subdirectory(ci_create_discovery)
add_subdirectory(ci_dispatcher)
add_subdirectory(ump_dispatcher_function)
add_subdirectory(midi1_to_ump)
add_subdirectory(send_ump)
